# led-ticker-baseball

./: .coverage  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-11-promotions-widget.md  2026-06-12-statcast-widget.md  2026-06-13-attendance-widget.md  2026-06-14-demo-gifs-and-readme-patterns.md  2026-06-15-attendance-abbr-and-probe-dry.md  2026-06-15-statcast-team-filter.md
docs/superpowers/specs/: 2026-06-10-promotions-widget-design.md  2026-06-11-statcast-widget-design.md  2026-06-13-attendance-widget-design.md  2026-06-14-demo-gifs-and-readme-patterns-design.md  2026-06-14-statcast-team-filter-design.md  2026-06-15-attendance-abbr-and-probe-dry-design.md
src/led_ticker_baseball/: __init__.py  attendance.py  emoji.py  promotions.py  scores.py  standings.py  statcast.py  teams.py  transition.py
tests/: conftest.py  test_attendance.py  test_emoji.py  test_import_purity.py  test_lazy_palette.py  test_placeholder.py  test_promotions.py  test_scoreboard.py  test_scores.py  test_smoke.py  test_standings.py  test_statcast.py  test_teams.py  test_transition.py
